# disk-control-analyzer

./: .gitignore  README.md  package-lock.json
backend/: README.md  app.py  pyproject.toml
backend/schemas/: scan_schema.py  simulate_schemas.py
backend/services/: control_model.py  metrics.py  scanner.py  simulator.py  transfer_function.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  router.jsx
frontend/src/components/: AppLayout.jsx  ErrorMessage.jsx  HeatmapChart.jsx  LineChartCard.jsx  Loading.jsx  MetricsPanel.jsx  NavBar.jsx  NumberInput.jsx  RootLocusChart.jsx  SectionCard.jsx  SelectedPointPanel.jsx
frontend/src/pages/: ScanPage.jsx  SingleDesignPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css
frontend/src/utils/: heatmap.js
