[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yueyingwu",email = "3265918933@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "control (>=0.10.2,<0.11.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
